--- a/node/public/style.css
+++ b/node/public/style.css
@@ -20,7 +20,7 @@ body{
     margin-right: 10px;
     margin-bottom: 5px;
   }
-	.switch h3, .device span{
+	.switch h3, .device span, .misc h3{
 		color:black;
     margin: 0;
     padding:0;
