--- a/node/public/style.css
+++ b/node/public/style.css
@@ -26,7 +26,7 @@ body{
     padding:0;
     text-decoration: none;
 	}
-  .alarm, .trigger{
+  .alarm, .trigger, .temp{
     display: inline-block;
     box-shadow: inset 0px 0px 10px 0px black;
     text-decoration: none;
